[package]
name = "stringslice"
version = "0.2.0"
authors = ["Lucas Jansen <7199136+staticintlucas@users.noreply.github.com>"]
description = "A collection of methods to slice strings based on character indices rather than bytes"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/staticintlucas/stringslice"
documentation = "https://docs.rs/stringslice/"
keywords = ["string", "slice", "substring", "unicode", "utf-8"]
categories = ["no-std", "algorithms", "parsing", "rust-patterns", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon_ = { package = "rayon", version = "1.10.0", optional = true }

[features]
std = []
rayon = ["std"]

[package.metadata.docs.rs]
features = ["std", "rayon"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
